[gd_scene load_steps=13 format=3 uid="uid://b48maps0fwka0"]

[ext_resource type="Script" uid="uid://bm210b1bjo5nk" path="res://scripts/characters/player.gd" id="1_dqkch"]
[ext_resource type="SpriteFrames" uid="uid://bbyv1ovjnn81t" path="res://resources/player_sprites.tres" id="2_qlg0r"]
[ext_resource type="PackedScene" uid="uid://boibe6gufrt7b" path="res://scenes/state_machine.tscn" id="3_fjrip"]
[ext_resource type="Script" uid="uid://m83fbafn4e2c" path="res://scripts/state_machine/player_attack_state.gd" id="4_smehm"]
[ext_resource type="Script" uid="uid://bb8dr4ukmk0tj" path="res://scripts/components/hitbox_component.gd" id="6_fjrip"]
[ext_resource type="Script" uid="uid://j0d6s6l6c78o" path="res://scripts/components/hurtbox_component.gd" id="7_smehm"]
[ext_resource type="Resource" uid="uid://cyico43yudxd1" path="res://resources/attacks/attack_player_basic.tres" id="7_ur7pv"]
[ext_resource type="Script" uid="uid://c4b5tl6j4p434" path="res://scripts/components/health_component.gd" id="8_ur7pv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ur7pv"]
radius = 31.0644

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d2wvv"]
radius = 14.0
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(53, 73)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ur7pv"]
radius = 17.0
height = 54.0

[node name="PlayerCharacter" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
collision_mask = 2
up_direction = Vector2(0, 1)
script = ExtResource("1_dqkch")
speed = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_qlg0r")
animation = &"attack"
autoplay = "idle"
frame = 3

[node name="PickupArea" type="Area2D" parent="." groups=["player_pickup_area"]]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_ur7pv")
debug_color = Color(0.599721, 0.497622, 0, 0.42)

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 22)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d2wvv")

[node name="StateMachine" parent="." instance=ExtResource("3_fjrip")]

[node name="Attack" parent="StateMachine" index="2"]
script = ExtResource("4_smehm")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 8
script = ExtResource("6_fjrip")
health_component = NodePath("../HealthComponent")
attack_data = ExtResource("7_ur7pv")
metadata/_custom_type_script = "uid://bb8dr4ukmk0tj"

[node name="HitboxCollider" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(45.5, 6.5)
shape = SubResource("RectangleShape2D_fjrip")
disabled = true

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://c4b5tl6j4p434"

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("7_smehm")
metadata/_custom_type_script = "uid://j0d6s6l6c78o"

[node name="HurtboxCollider" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_ur7pv")

[editable path="StateMachine"]
